--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.2.1",
-    "bookshelf": "^0.7.6",
+    "body-parser": "^1.4.3",
+    "bookshelf": "^0.6.12",
+    "connect": "^3.0.1",
+    "connect-multiparty": "^1.1.0",
     "express": "^4.5.1",
-    "knex": "^0.6.20"
+    "express-partials": "^0.3.0",
+    "express-session": "^1.6.4",
+    "express3-handlebars": "^0.5.0",
+    "knex": "~0.5.7"
   }
 }
